<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RecreEmulCream</string>
    <string name="app_title">RecreEmulCream</string>
    <string name="select_console">Select a Console</string>
    <!-- Console names -->
    <string name="nes">NES</string>
    <string name="snes">SNES</string>
    <string name="gba">GBA</string>
    <string name="ds">DS</string>
    <string name="nes_console">Nintendo Entertainment System</string>
    <string name="snes_console">Super Nintendo Entertainment System</string>
    <string name="gba_console">Game Boy Advance</string>
    <string name="ds_console">Nintendo DS</string>

    <!-- Button labels -->
    <string name="load_rom">Load ROM</string>
    <string name="scan_for_roms">Scan for ROMs</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="pause">Pause</string>

    <!-- Game control labels -->
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_x">X</string>
    <string name="button_y">Y</string>
    <string name="button_l">L</string>
    <string name="button_r">R</string>
    <string name="button_start">START</string>
    <string name="button_select">SELECT</string>

    <!-- Settings menu -->
    <string name="audio_settings">Audio Settings</string>
    <string name="video_settings">Video Settings</string>
    <string name="control_settings">Control Settings</string>
    <string name="audio_latency">Audio Latency</string>
    <string name="fps_counter">FPS Counter</string>
    <string name="frame_skip">Frame Skip</string>
    <string name="scaling_mode">Scaling Mode</string>
</resources>